# ousia

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ledger/: Cargo.toml  LICENSE  README.md
ledger/src/: asset.rs  balance.rs  error.rs  holding.rs  lib.rs  money.rs  object.rs  transaction.rs  value_object.rs
ledger/src/adapters/: memory.rs  mod.rs  postgres.rs
ledger/tests/: integration_tests.rs
ousia/: Cargo.toml  README.md
ousia/src/: error.rs  lib.rs  query.rs
ousia/src/adapters/: cockroach.rs  mod.rs  postgres.rs  query.rs  record.rs  sqlite.rs
ousia/src/adapters/cockroach/: mod.rs
ousia/src/adapters/ledger/: mod.rs  postgres_ledger.rs
ousia/src/adapters/postgres/: adapter_impl.rs  helper.rs  ledger_impl.rs  mod.rs  postgres.rs  traversal_impl.rs  unique_impl.rs
ousia/src/adapters/sqlite/: mod.rs
ousia/src/edge/: meta.rs  query.rs  traits.rs
ousia/src/ledger/: asset.rs  balance.rs  mod.rs  money.rs  transaction.rs
ousia/src/object/: meta.rs  mod.rs  traits.rs
ousia_bench/: Cargo.toml
ousia_bench/benches/: ousia_edges.rs  ousia_queries.rs  ousia_views.rs  ousia_vs_raw.rs
ousia_bench/src/: lib.rs
ousia_derive/: Cargo.toml  README.md
ousia_derive/src/: lib.rs  shared.rs
ousia_derive/src/edge/: mod.rs
ousia_derive/src/object/: generate.rs  mod.rs
ousia_derive/src/object/unique/: generate.rs  parse.rs
src/: error.rs  lib.rs  query.rs
src/adapters/: mod.rs  postgres.rs
src/edge/: mod.rs  query.rs  traits.rs
src/edges/: meta.rs  mod.rs  traits.rs
src/engine/: mod.rs  traits.rs
src/engine/adapters/: error.rs  mod.rs  postgres.rs
src/ledger/: mod.rs
src/object/: meta.rs  mod.rs  query.rs  traits.rs
test_ledger/: Cargo.toml
test_ledger/src/: lib.rs  test_postgres_ledger_standalone.rs
test_suit/: Cargo.toml
test_suit/src/: lib.rs
test_suit/src/adapter/: mod.rs  test_cockroach.rs  test_postgres.rs  test_postgres_ledger.rs  test_postgres_ledger_standalone.rs  test_sqlite.rs
