[package]
name = "ousia"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive"]
derive = ["ousia_derive"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
ulid = { version = "1.2.1", features = ["serde"] }
ousia_derive = { path = "ousia_derive", optional = true }
async-trait = "0.1.89"
