[package]
name = "ledger"
version = "1.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
