[package]
name = "ousia-ledger"
version = "1.2.1"
edition = "2024"
description = "A high-performance double-entry ledger system for Rust"
license = "MIT"
repository = "https://github.com/theousia/ousia/tree/main/ledger"
documentation = "https://docs.rs/ousia-ledger"
readme = "README.md"
keywords = ["ledger", "finance", "payments", "money", "double-entry"]
categories = ["finance", "database"]
exclude = ["tests/", ".github/", "Cargo.lock"]
rust-version = "1.85"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
metrics = "0.24.3"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "derive",
    "tls-native-tls",
    "json",
    "uuid",
    "chrono",
]}
blake3 = "1.8.3"
