[package]
name = "ousia"
version = "1.0.0"
edition = "2024"

[features]
default = ["derive", "postgres", "ledger"]
derive = ["dep:ousia_derive"]

full = ["derive", "cockroach", "postgres", "sqlite", "ledger"]

cockroach = ["dep:sqlx"]
postgres = ["dep:sqlx"]
sqlite = ["dep:sqlx"]

ledger = ["dep:ledger"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.89"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "derive",
    "tls-native-tls",
    "json",
    "uuid",
    "chrono",
], optional = true}
tokio = { version = "1", features = ["macros", "time"] }
redis = { version = "1", features = ["json", "tokio-comp"] }
ousia_derive = { version = "1", path = "../ousia_derive", optional = true }
ledger = { version = "1", path = "../ledger", optional = true }
uuid = { version = "1", features = ["v7", "serde"] }
blake3 = "1.8.3"

[dev-dependencies]
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }
bincode = "1.3"
