[package]
name = "ousia_bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "ousia_vs_raw"
harness = false

[[bench]]
name = "ousia_edges"
harness = false

[[bench]]
name = "ousia_queries"
harness = false

[dependencies]
ousia = { path = "../ousia" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "json",
    "uuid",
    "chrono",
] }
uuid = { version = "1", features = ["v7", "serde"] }
rand = "0.9"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
