[package]
name = "ousia_derive"
version = "1.0.5"
edition = "2024"
description = "Derive macros for the ousia library"
license = "MIT"
repository = "https://github.com/theousia/ousia"
documentation = "https://docs.rs/ousia-derive"
exclude = ["Cargo.lock"]
rust-version = "1.85"

[lib]
name = "ousia_derive"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "2.0"
