[package]
name = "ousia_test_ledger"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
ousia = { version = "1", path = "../ousia" }
serde = "1.0.228"
tokio = { version = "1", features = ["macros", "time"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "derive",
    "tls-native-tls",
    "json",
    "chrono",
]}
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "cockroach_db"] }
rand = "0.9.2"
tempfile = "3"
serde_json = "1"
uuid = {version="1",features = ["v7", "serde"]}
